hardcoded fix for BadgeWindow hidden under header

--- a/lvlup/src/components/BadgeWindow/BadgeWindow.css
+++ b/lvlup/src/components/BadgeWindow/BadgeWindow.css
@@ -64,3 +64,7 @@
     margin-left: 2px;
     margin-right: 15px;
   }
+
+  .spacer {
+    height: 80px;
+  }
